--- a/yellowpages/src/main/res/layout/yp_search_results_list_item.xml
+++ b/yellowpages/src/main/res/layout/yp_search_results_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="175dp"
+    android:layout_height="wrap_content"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -14,7 +14,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/color_name"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -22,9 +22,13 @@
             tools:text="color name" />
 
         <TextView
-            android:id="@+id/color_value"
+            android:id="@+id/tv_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="#000000" />
+            android:textColor="@color/colorPrimary"
+            />
+
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
