纠正错误的文件list.json---

--- a/yellowpages/src/main/res/layout/yp_activity_init.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_init.xml
@@ -10,14 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
-<!--
 
-    <ProgressBar
+   <!-- <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/init_progress_bar"
-        />
--->
-
+        />-->
+css html js, php,
 
 </LinearLayout>
