--- a/yellowpages/src/main/res/layout/yp_activity_home.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundGray"
+    android:background="@color/yp_color_bg_gray"
     android:clipToPadding="true"
     android:fitsSystemWindows="true"
     android:focusable="true"
@@ -40,9 +40,9 @@
             app:floatingSearch_dismissOnOutsideTouch="true"
             app:floatingSearch_leftActionMode="showHamburger"
             app:floatingSearch_menu="@menu/yp_menu_search_view"
-            app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
-            app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
-            app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
+            app:floatingSearch_searchBarMarginLeft="@dimen/yp_search_view_inset"
+            app:floatingSearch_searchBarMarginRight="@dimen/yp_search_view_inset"
+            app:floatingSearch_searchBarMarginTop="@dimen/yp_search_view_inset"
             app:floatingSearch_searchHint="Search..."
             app:floatingSearch_showSearchKey="true"
             app:floatingSearch_suggestionsListAnimDuration="250" />
@@ -64,7 +64,7 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackgroundGray">
+        android:background="@color/yp_color_bg_gray">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/activity_home"
