--- a/yellowpages/src/main/res/layout/yp_fragment_expandable_list_view.xml
+++ b/yellowpages/src/main/res/layout/yp_fragment_expandable_list_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="@color/yp_color_bg_light"
 
     >
 
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/expand_list_view"
         android:groupIndicator="@null"
+
         />
 
 
