--- a/yellowpages/src/main/res/layout/yp_item_elv_child_category.xml
+++ b/yellowpages/src/main/res/layout/yp_item_elv_child_category.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:id="@+id/tv_child_title"
+        android:text="1231232132"
         android:textSize="16sp"
-        android:paddingLeft="45dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="55dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:textColor="@color/font_block_700"
+        android:textColor="@color/yp_font_black_900"
 
         />
 
