--- a/yellowpages/src/main/res/layout/yp_item_elv_group.xml
+++ b/yellowpages/src/main/res/layout/yp_item_elv_group.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
     android:paddingLeft="15dp"
     >
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="25dp"
-        android:textColor="@color/font_block_700"
+        android:textColor="@color/yp_font_black_700"
         android:textSize="19sp"
         android:layout_centerVertical="true"
 
@@ -43,8 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
-        android:textColor="@color/font_block_400"
-        android:textSize="17sp"
+        android:textColor="@color/yp_font_black_700"
+        android:textSize="16sp"
         android:layout_centerVertical="true"
 
         />
