--- a/yellowpages/src/main/res/layout/yp_item_elv_child_category.xml
+++ b/yellowpages/src/main/res/layout/yp_item_elv_child_category.xml
@@ -8,10 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/tv_child_title"
-        android:text="1231232132"
-        android:textSize="16sp"
+        android:textSize="@dimen/yp_item_children_text_size"
         android:gravity="center_vertical"
-        android:paddingLeft="55dp"
+        android:paddingLeft="@dimen/yp_item_children_padding_left"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textColor="@color/yp_font_black_900"
