--- a/yellowpages/src/main/res/values/colors.xml
+++ b/yellowpages/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="yp_color_bg_gray">#eeeeee</color>
     <color name="yp_color_bg_gray_1">#fefefe</color>
     <color name="yp_color_bg_light">#ffffff</color>
+    <color name="yp_font_blue_400">#498ba1</color>
 
 </resources>
