--- a/yellowpages/src/main/res/layout/yp_activity_department.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_department.xml
@@ -8,15 +8,16 @@
 
     <include android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/yp_common_toolbar"/>
+        layout="@layout/yp_common_toolbar"
+        />
 
     <ListView
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lv_unit"
-        >
+        android:headerDividersEnabled="true"
 
-
-    </ListView>
+        />
 
 </LinearLayout>
