--- a/yellowpages/src/main/res/layout/yp_activity_home.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_home.xml
@@ -38,7 +38,7 @@
             app:floatingSearch_close_search_on_keyboard_dismiss="false"
             app:floatingSearch_dimBackground="false"
             app:floatingSearch_dismissOnOutsideTouch="true"
-            app:floatingSearch_leftActionMode="showHamburger"
+            app:floatingSearch_leftActionMode="showSearch"
             app:floatingSearch_menu="@menu/yp_menu_search_view"
             app:floatingSearch_searchBarMarginLeft="@dimen/yp_search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/yp_search_view_inset"
