--- a/yellowpages/src/main/res/menu/yp_menu_search_view.xml
+++ b/yellowpages/src/main/res/menu/yp_menu_search_view.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_white_24dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+    <item android:id="@+id/yp_action_clear_history"
+        android:icon="@drawable/ic_clear_black_24dp"
+        android:title="清除搜索记录"
         app:showAsAction="ifRoom"
-        android:title="搜索"
-
+        android:orderInCategory="1"
         />
 
 </menu>
