--- a/yellowpages/src/main/res/layout/yp_activity_home.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_home.xml
@@ -18,7 +18,7 @@
         android:fitsSystemWindows="true"
         android:visibility="gone">
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
             android:id="@+id/search_results_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -43,7 +43,7 @@
             app:floatingSearch_searchBarMarginLeft="@dimen/yp_search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/yp_search_view_inset"
             app:floatingSearch_searchBarMarginTop="@dimen/yp_search_view_inset"
-            app:floatingSearch_searchHint="Search..."
+            app:floatingSearch_searchHint="名称或者号码"
             app:floatingSearch_showSearchKey="true"
             app:floatingSearch_suggestionsListAnimDuration="250" />
 
