--- a/yellowpages/src/main/res/layout/yp_item_elv_child_collected.xml
+++ b/yellowpages/src/main/res/layout/yp_item_elv_child_collected.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
+    android:id="@+id/rl_item_search_result"
+    android:background="@color/yp_color_bg_light"
     >
 
     <TextView
