--- a/yellowpages/src/main/res/layout/yp_activity_home.xml
+++ b/yellowpages/src/main/res/layout/yp_activity_home.xml
@@ -35,10 +35,10 @@
             android:layout_height="match_parent"
             android:focusable="true"
             android:visibility="gone"
-            app:floatingSearch_close_search_on_keyboard_dismiss="false"
+            app:floatingSearch_close_search_on_keyboard_dismiss="true"
             app:floatingSearch_dimBackground="false"
             app:floatingSearch_dismissOnOutsideTouch="true"
-            app:floatingSearch_leftActionMode="showSearch"
+            app:floatingSearch_leftActionMode="showHome"
             app:floatingSearch_menu="@menu/yp_menu_search_view"
             app:floatingSearch_searchBarMarginLeft="@dimen/yp_search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/yp_search_view_inset"
