--- a/yellowpages/src/main/res/layout/yp_custom_view_department.xml
+++ b/yellowpages/src/main/res/layout/yp_custom_view_department.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ll_department"
-    android:fitsSystemWindows="true"
-    android:clipToPadding="true"
     android:clickable="true"
+    android:background="@color/colorAccent"
     >
 
     <ImageView
