--- a/yellowpages/src/main/res/layout/yp_custom_activity.xml
+++ b/yellowpages/src/main/res/layout/yp_custom_activity.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:clipToPadding="true"
+
+    >
 
     <include layout="@layout/yp_common_toolbar"
         android:layout_height="wrap_content"
