--- a/yellowpages/src/main/res/layout/yp_fragment_department.xml
+++ b/yellowpages/src/main/res/layout/yp_fragment_department.xml
@@ -1,183 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
+    xmlns:ypd="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:columnCount="8"
+    android:columnCount="2"
     android:rowCount="4"
-    android:padding="@dimen/yellow_pages_main_padding_left"
+    android:orientation="horizontal"
     android:id="@+id/grad_layout_department"
+    android:useDefaultMargins="true"
+    android:layout_gravity="center"
+    android:layout_marginLeft="@dimen/yp_main_department_margin_left"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     >
 
-    <TextView
-        android:text="常用部门"
-        android:textSize="20sp"
-        android:textColor="@color/yp_font_black_700"
-        android:layout_columnSpan="8"
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department1"
+        android:layout_width="@dimen/yp_layout_width_department"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginBottom="15dp"
-        />
-
-    <!--row1-->
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_1895"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_1895"
+        ypd:yp_text="1895服务大厅"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_1"
-        />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="1895服务大厅"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_1"
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
+
         />
 
-
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_library"
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department2"
+        android:layout_width="@dimen/yp_layout_width_department"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_library"
+        ypd:yp_text="图书馆"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:layout_marginLeft="@dimen/department_icon_margin_left"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_2"
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
 
         />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="图书馆"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:layout_marginBottom="@dimen/department_item_margin_bottom"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_2"
-        />
 
-    <!--row2-->
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_repair"
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department3"
+        android:layout_width="@dimen/yp_layout_width_department"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_repair"
+        ypd:yp_text="维修服务中心"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_3"
-        />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="维修服务中心"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_3"
-        />
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
 
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_bike"
+        />
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department4"
+        android:layout_width="@dimen/yp_layout_width_department"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_bike"
+        ypd:yp_text="智能自行车"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:layout_marginLeft="@dimen/department_icon_margin_left"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_4"
-
-        />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="智能自行车"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:layout_marginBottom="@dimen/department_item_margin_bottom"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_4"
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
         />
 
-    <!--row3-->
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_building"
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department5"
+        android:layout_width="@dimen/yp_layout_width_department"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_building"
+        ypd:yp_text="学生宿舍管理中心"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_5"
-        />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="学生宿舍管理中心"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_5"
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
         />
 
-    <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
-        android:src="@drawable/icon_yellow_pages_hospital"
+    <com.bdpqchen.yellowpagesmodule.yellowpages.custom.DepartmentItemView
+        android:id="@+id/department6"
+        android:layout_width="@dimen/yp_layout_width_department"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
+        ypd:yp_icon_src="@drawable/icon_yellow_pages_hospital"
+        ypd:yp_text="校医院"
         android:layout_columnSpan="1"
-        android:scaleType="centerCrop"
-        android:layout_marginLeft="@dimen/department_icon_margin_left"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:padding="5dp"
-        android:id="@+id/department_iv_6"
-
-        />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
-        android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="校医院"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:background="@drawable/yp_bg_department_click"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:id="@+id/department_tv_6"
+        android:layout_rowSpan="1"
+        ypd:yp_background="@drawable/yp_bg_department_click"
         />
 
 </GridLayout>
