--- a/yellowpages/src/main/res/layout/yp_custom_view_department.xml
+++ b/yellowpages/src/main/res/layout/yp_custom_view_department.xml
@@ -5,32 +5,28 @@
     android:layout_height="match_parent"
     android:id="@+id/ll_department"
     android:clickable="true"
-    android:background="@color/colorAccent"
     >
 
     <ImageView
-        android:layout_height="@dimen/yellow_pages_department_icon_size"
-        android:layout_width="@dimen/yellow_pages_department_icon_size"
+        android:layout_height="@dimen/yp_department_icon_size"
+        android:layout_width="@dimen/yp_department_icon_size"
         android:src="@drawable/icon_yellow_pages_library"
-        android:layout_columnSpan="1"
         android:scaleType="centerCrop"
-        android:layout_marginLeft="@dimen/department_icon_margin_left"
         android:clickable="false"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center_vertical"
         android:padding="5dp"
         android:id="@+id/iv_department"
-
         />
-    <TextView android:layout_height="@dimen/yp_yellow_pages_department_tv_size"
-        android:layout_width="wrap_content"
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:maxWidth="135dp"
         android:textColor="@color/yp_font_black_700"
-        android:textSize="@dimen/yellow_pages_department_font_size"
-        android:text="图书馆"
-        android:paddingLeft="10dp"
-        android:layout_columnSpan="3"
-        android:layout_marginBottom="@dimen/department_item_margin_bottom"
+        android:textSize="@dimen/yp_department_font_size"
+
         android:clickable="false"
-        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:id="@+id/tv_department"
         />
 
